--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "axios": "^0.27.2",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
-    "express": "^4.18.1",
-    "request": "^2.88.2"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "eslint": "^8.16.0"
